--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,20 +1,22 @@
 ---
 // Henter parametrene fra Astro.props
-const { htmlheading="h2", size="medium", font="sans", stylingclasses=""} = Astro.props; 
+const { htmlheading = "h2", size = "medium", font = "sans", stylingclasses = "" } = Astro.props;
 const Htmlheading = htmlheading;
- 
+
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"large": "text-3xl lg:text-6xl",
-"medium": "text-2xl lg:text-3xl",
-"small": "text-xl",
+  xlarge: "lg:text-computer-h1 text-mobile-h1",
+  large: "lg:text-computer-h2 text-mobile-h2",
+  medium: "lg:text-computer-h3 text-mobile-h3",
+  small: "lg:text-computer-h4 text-mobile-h4",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
 const fontClasses = {
-"display": "font-display",
-"sans": "font-sans",
-"serif": "font-serif",
+  display: "font-heading",
+  sans: "font-sans",
+  serif: "font-serif",
 };
 ---
+
 <Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}><slot /></Htmlheading>
